仅方块，用于建筑